Update contact details and footer

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ desc: Tools and training around open development data
 <div id="more" class="js-hidden">
 
 
-
        </div>
     </div>
 </div>
 
+{% include about.html %}
