Update blurb and FAQs

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@ desc: Tools and training around open development data
 <div class="row-fluid color3 review">
     <div class="span12">
 <p>The Open Development Toolkit is a project from <a href="http://devinit.org//">Development Initiatives</a> and the <a href=
-    "http://okfn.org">Open Knowledge Foundation</a> starting in January 2014. The Toolkit will act as a hub around open development, bringing together tools and training materials to maximise the use of open data that could be used to inform international development.
+    "http://okfn.org">Open Knowledge Foundation</a>, starting in January 2014. The Toolkit will act as a hub around open development, bringing together tools and training materials to maximise the value of open data around the development sector.
 
 
-<p>We'll be seeking input from experts in the open development sector very soon - which tools do you already use to make sense of open data, and what features would you like to see in them? There will also be a focus throughout the project on the needs of citizens in aid-receiving countries - what would you like to know about aid flows into your country, and how would you like to best access them?
-
-    If you'd like to stay updated with progress on the Open Development Toolkit, please sign up here: <a id="readmore" href="#" title="">Weiterlesen</a></p>
+<p>We'll be seeking input from experts in the sector very soon, so keep an eye out! The project will be especially focused upon the needs of citizens in aid-receiving countries, as well as learning from what others have already done, and building upon their work. <strong>If you'd like to know more about the project, please get in touch with Zara Rahman, Project Lead, on <a href="mailto:zara.rahman@okfn.org.">zara.rahman@okfn.org</a></strong> 
+	
 <div id="more" class="js-hidden">
 
 
