Correct URLs and contact details

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ desc: Tools and training around open development data
     "http://okfn.org">Open Knowledge Foundation</a>, starting in January 2014. The Toolkit will act as a hub around open development, bringing together tools and training materials to maximise the value of open data around the development sector.
 
 
-<p>We'll be seeking input from experts in the sector very soon, so keep an eye out! The project will be especially focused upon the needs of citizens in aid-receiving countries, as well as learning from what others have already done, and building upon their work. <strong>If you'd like to know more about the project, please get in touch with Zara Rahman, Project Lead, on <a href="mailto:zara.rahman@okfn.org.">zara.rahman@okfn.org</a></strong> 
-	
+<p>We'll be seeking input from experts in the sector very soon, so keep an eye out! The project will be especially focused upon the needs of citizens in aid-receiving countries, as well as learning from what others have already done, and building upon their work. If you'd like to know more about the project, please get in touch with Zara Rahman, Project Lead, on <a href="mailto:zara.rahman@okfn.org.">zara.rahman@okfn.org</a>
+
 <div id="more" class="js-hidden">
 
 
