--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ desc: Tools and training around open development data
 {% include header.html %}
 <div class="row-fluid color3 review">
     <div class="span12">
-<p>The Open Development Toolkit is a project from <a href="http://devinit.org//">Development Initiatives</a> and the <a href=
-    "http://okfn.org">Open Knowledge Foundation</a>, starting in January 2014. The Toolkit will act as a hub around open development, bringing together tools and training materials to maximise the value of open data around the development sector.
+	<p>The Open Development Toolkit is a project from <a href="http://devinit.org//">Development Initiatives</a> and the <a href="http://okfn.org">Open Knowledge Foundation</a>, which began in January 2014. The Toolkit will act as a hub around open development, bringing together tools and training materials in one place, with the aim of increasing use of open development data and encouraging its use to inform decisions within the sector. 
 
+	<p>We'll be seeking input from experts in the sector very soon, so keep an eye out! There'll be a special focus on making data accessible and usable by people living in aid-receiving countries, and by those working in the development sector.
 
-<p>We'll be seeking input from experts in the sector very soon, so keep an eye out! The project will be especially focused upon the needs of citizens in aid-receiving countries, as well as learning from what others have already done, and building upon their work. If you'd like to know more about the project, please get in touch with Zara Rahman, Project Lead, on <a href="mailto:zara.rahman@okfn.org.">zara.rahman@okfn.org</a>
+	If you'd like to know more about the project, please get in touch with Zara Rahman, Project Lead, on <a href="mailto:zara.rahman@okfn.org.">zara.rahman@okfn.org</a>
 
 <div id="more" class="js-hidden">
 
