--- a/index.html
+++ b/index.html
@@ -18,4 +18,6 @@ desc: Tools and training around open development data
     </div>
 </div>
 
+{% include postsandresources.html %}
+
 {% include about.html %}
