--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ desc: Tools and training around open development data
 
 	<p>We'll be seeking input from experts in the sector very soon, so keep an eye out! There'll be a special focus on making data accessible and usable by people living in aid-receiving countries, and by those working in the development sector.
 
-	If you'd like to know more about the project, please get in touch with Zara Rahman, Project Lead, on <a href="mailto:zara.rahman@okfn.org.">zara.rahman@okfn.org</a>
+	If you'd like to know more about the project, please get in touch with Zara Rahman, Project Lead, on <a href="mailto:zara.rahman@okfn.org">zara.rahman@okfn.org</a>
 
         <div id="more" class="js-hidden">
         </div>
